--- a/css/styles.css
+++ b/css/styles.css
@@ -174,22 +174,38 @@ header, .navbar{
 #texto-vamosLa{
   color: white;
   font-family: Roboto slab;
-  font-size: 20px;
-  text-align:center;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 700;
+  margin: 0%;
 }
 
 #continuar{
-  text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
   bottom: 30px;
+}
+
+#continuar a{
   text-decoration: none;
-  right: 0;
-  left: 0;
+  text-align: center;
 }
 
 #continuar i{
-  font-size: 30px;
+  font-size: 35px;
   color: #42BEBC;
+}
+
+#continuarIcon, #texto-vamosLa{
+  transition: 0.5s;
+  animation: mouse-anim 1.2s ease-out 0s infinite alternate;
+}
+
+#continuarBtn:hover #continuarIcon{
+  color: #AF36BF;
 }
 
 #Homepage{
@@ -494,4 +510,13 @@ header, .navbar{
 
 }
 
+/*animate*/
 
+@keyframes mouse-anim {
+  from {
+    transform: translateY(5px);
+  }
+  to {
+    transform: translateY(-15px);
+  }
+}
